# deepseek-ocr-mcp

./: LICENSE  README.MD  deepseek_ocr_server.py  pyproject.toml  requirements.txt
